Fixed: size, alignment and inheritance of styles

--- a/client/src/components/Generics/InputGroups/SliderInput.module.scss
+++ b/client/src/components/Generics/InputGroups/SliderInput.module.scss
@@ -11,6 +11,7 @@
   column-gap: 5rem;
   
   label {
+    @include text-shadow;
     grid-area: property-label;
   }
 
