--- a/client/src/components/Generics/Modals/Modal.module.scss
+++ b/client/src/components/Generics/Modals/Modal.module.scss
@@ -10,8 +10,6 @@
   position: relative;
   width: fit-content;
   height: fit-content;
-  min-width: 20%;
-  max-height: 80%;
 
   color: color.$light1;
 
