--- a/client/src/components/Pages/Home/PlanningInputs.module.scss
+++ b/client/src/components/Pages/Home/PlanningInputs.module.scss
@@ -2,6 +2,5 @@
 .Inputs {
   display: flex;
   flex-direction: column;
-  row-gap: 1rem;
-  padding: 1rem 0;
+  row-gap: 0.5rem;
 }
