--- a/client/src/components/Pages/Home/PlanningSelection.module.scss
+++ b/client/src/components/Pages/Home/PlanningSelection.module.scss
@@ -7,7 +7,7 @@
     "searchbar"
     "aircraft-buttons";
   row-gap: 1rem;
-  padding: 1rem 0;
+  padding: 0.5rem 0;
   
   .Toggles {
     grid-area: toggles;
